--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="desktop-hide"><div class="text"> L'application est web est utilisable uniquement sur mobile !</div></div>
+    <div id="root">
+      
+    </div>
 
   </body>
 </html>
